<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".EULA">

    <!--顶部-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:padding="16dp">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onBackArrowClick"
            android:padding="2dp"
            android:src="@drawable/ic_arrow_back"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?android:attr/textColorPrimary" />

        <TextView
            android:id="@+id/pageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="隐私协议"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/backArrow"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <!-- 中间内容部分-->
    <ScrollView
        android:id="@+id/privacyScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/pageTitle"
        android:layout_marginTop="80dp"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/contentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            tools:ignore="ExtraText">
            <!-- eula -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="注意"
                android:textColor="@color/my_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eula_1"
                android:textSize="12sp" />


            <!-- eula-A -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="通用许可协议"
                android:textColor="@color/my_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eula_2"
                android:textSize="12sp" />

            <!-- eula-B -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="正文"
                android:textColor="@color/my_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eula_3"
                android:textSize="12sp" />

            <!-- eula -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="定义"
                android:textColor="@color/my_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eula_4"
                android:textSize="12sp" />

            <!-- eula -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="授权范围"
                android:textColor="@color/my_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eula_5"
                android:textSize="12sp" />

            <!-- eula -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="限制"
                android:textColor="@color/my_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eula_6"
                android:textSize="12sp" />

            <!-- eula -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="免责声明："
                android:textColor="@color/my_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eula_7"
                android:textSize="12sp" />

            <!-- eula -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="许可终止："
                android:textColor="@color/my_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eula_8"
                android:textSize="12sp" />

            <!-- eula -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="隐私条款"
                android:textColor="@color/my_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/privacyContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eula_9"
                android:textSize="12sp" />

            <!-- 底部按钮 -->
            <Button
                android:id="@+id/confirmButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="16dp"
                android:onClick="onConfirmButtonClick"
                android:text="我已阅读"
                android:visibility="gone" />


        </LinearLayout>

    </ScrollView>


</FrameLayout>
